--- a/index.html
+++ b/index.html
@@ -6,23 +6,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
     <link rel="stylesheet" href="index.css">
 </head>
 
 <body>
     </div>
-    <div class="container">
+    <div class="container text-center mt-3">
         <header>
-            <h1>代辦事項</h1>
+            <h1 class="title">代辦事項</h1>
         </header>
         <main>
             <input type="text" placeholder="請輸入代辦事項" class="textContent" style="font-size: 20px;">
-            <input type="button" value="新增" class="saveBtn">
+            <input type="button" value="新增" class="saveBtn disabled">
             <ul class="list"></ul>
         </main>
     </div>
 
-
+    <!-- JavaScript Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
+        crossorigin="anonymous"></script>
     <script src="index.js"></script>
 
 </body>
